Added option to disable externalTrafficPolicy and updated default chrome browser and added opera and firefox

--- a/selenoid4k8s/templates/selenoid-k8s-service.yaml
+++ b/selenoid4k8s/templates/selenoid-k8s-service.yaml
@@ -12,7 +12,9 @@ metadata:
   {{- end }}
 {{- end }}
 spec:
+{{- if .Values.service.externalTrafficPolicy }}
   externalTrafficPolicy: Cluster
+{{- end }}
   ports:
   - name: selenoid-ui
     {{- if ( and ( .Values.service.nodePortUi ) ( eq .Values.service.type "NodePort" ) ) }}
