Added ability to specify docker image for prepull daemonset - added for example to use some other registry, not dockerhub

--- a/selenoid4k8s/templates/selenoid-k8s-prepull-deamonset.yaml
+++ b/selenoid4k8s/templates/selenoid-k8s-prepull-deamonset.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: selenoid-images-prepull
-        image: docker
+        image: {{ .Values.image.repositoryPrepull }}:{{ .Values.image.tagPrepull }}
         command:
         - sh
         - -c
