--- a/selenoid4k8s/values.yaml
+++ b/selenoid4k8s/values.yaml
@@ -4,8 +4,10 @@ replicaCount: 1
 image:
   repositoryHub: alcounit/selenoidk8
   repositoryUi: aerokube/selenoid-ui
+  repositoryPrepull: docker
   tagHub: latest
   tagUi: latest
+  tagPrepull: latest
 
 imagePullSecrets: []
 
