--- a/selenoid4k8s/templates/selenoid-k8s-prepull-deamonset.yaml
+++ b/selenoid4k8s/templates/selenoid-k8s-prepull-deamonset.yaml
@@ -17,13 +17,16 @@ spec:
         name: {{ .Release.Name }}-selenoid-images-prepull
     spec:
       containers:
+      - name: pause
+        image: gcr.io/google_containers/pause
+      initContainers:
       - name: selenoid-images-prepull
         image: {{ .Values.image.repositoryPrepull }}:{{ .Values.image.tagPrepull }}
         command:
         - sh
         - -c
-        - while true; do grep image /etc/selenoid/browsers.json | awk '{print $2}' | tr -d ',' | tr -d '"' |
-          xargs -I{} docker pull {}; sleep 3600; done
+        - grep image /etc/selenoid/browsers.json | awk '{print $2}' | tr -d ',' | tr -d '"' |
+          xargs -I{} docker pull {}
         resources:
           requests:
             memory: "64Mi"
@@ -45,3 +48,7 @@ spec:
       - name: browsers-config
         configMap:
           name: {{ .Release.Name }}-selenoid-config
+    {{- if .Values.placement.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.placement.nodeSelector | indent 8 }}
+    {{- end }}
